src/videoio.h

    typedef cv::VideoCapture *VideoCapture;
typedef void *VideoCapture;
    // VideoCapture
    VideoCapture VideoCapture_New();
    void VideoCapture_Close(VideoCapture v);
    bool VideoCapture_Open(VideoCapture v, const char *uri);
    bool VideoCapture_OpenWithAPI(VideoCapture v, const char *uri, int apiPreference);
    bool VideoCapture_OpenDevice(VideoCapture v, int device);
    bool VideoCapture_OpenDeviceWithAPI(VideoCapture v, int device, int apiPreference);
    double VideoCapture_Get(VideoCapture v, int prop);
    int VideoCapture_IsOpened(VideoCapture v);
    void VideoCapture_Grab(VideoCapture v, int skip);