packages/dartcv/lib/src/g/videoio.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - VideoIO
///
class CvNativeVideoIO {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeVideoIO(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeVideoIO.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void VideoCapture_Close(
    VideoCapturePtr self,
  ) {
    return _VideoCapture_Close(
      self,
    );
  }

  late final _VideoCapture_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(VideoCapturePtr)>>(
          'VideoCapture_Close');
  late final _VideoCapture_Close =
      _VideoCapture_ClosePtr.asFunction<void Function(VideoCapturePtr)>();

  ffi.Pointer<CvStatus> VideoCapture_Get(
    VideoCapture self,
    int prop,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _VideoCapture_Get(
      self,
      prop,
      rval,
    );
  }

  late final _VideoCapture_GetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('VideoCapture_Get');
  late final _VideoCapture_Get = _VideoCapture_GetPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoCapture, int, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> VideoCapture_Get_Async(
    VideoCapture self,
    int prop,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_Get_Async(
      self,
      prop,
      callback,
    );
  }

  late final _VideoCapture_Get_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int,
              imp1.CvCallback_1)>>('VideoCapture_Get_Async');
  late final _VideoCapture_Get_Async = _VideoCapture_Get_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_Grab(
    VideoCapture self,
    int skip,
  ) {
    return _VideoCapture_Grab(
      self,
      skip,
    );
  }

  late final _VideoCapture_GrabPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, ffi.Int)>>('VideoCapture_Grab');
  late final _VideoCapture_Grab = _VideoCapture_GrabPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture, int)>();

  ffi.Pointer<CvStatus> VideoCapture_Grab_Async(
    VideoCapture self,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_Grab_Async(
      self,
      callback,
    );
  }

  late final _VideoCapture_Grab_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, imp1.CvCallback_1)>>('VideoCapture_Grab_Async');
  late final _VideoCapture_Grab_Async = _VideoCapture_Grab_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_IsOpened(
    VideoCapture self,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _VideoCapture_IsOpened(
      self,
      rval,
    );
  }

  late final _VideoCapture_IsOpenedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, ffi.Pointer<ffi.Int>)>>('VideoCapture_IsOpened');
  late final _VideoCapture_IsOpened = _VideoCapture_IsOpenedPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> VideoCapture_IsOpened_Async(
    VideoCapture self,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_IsOpened_Async(
      self,
      callback,
    );
  }

  late final _VideoCapture_IsOpened_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, imp1.CvCallback_1)>>('VideoCapture_IsOpened_Async');
  late final _VideoCapture_IsOpened_Async =
      _VideoCapture_IsOpened_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_New(
    ffi.Pointer<VideoCapture> rval,
  ) {
    return _VideoCapture_New(
      rval,
    );
  }

  late final _VideoCapture_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<VideoCapture>)>>('VideoCapture_New');
  late final _VideoCapture_New = _VideoCapture_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<VideoCapture>)>();

  ffi.Pointer<CvStatus> VideoCapture_NewFromFile(
    ffi.Pointer<ffi.Char> filename,
    int apiPreference,
    ffi.Pointer<VideoCapture> rval,
  ) {
    return _VideoCapture_NewFromFile(
      filename,
      apiPreference,
      rval,
    );
  }

  late final _VideoCapture_NewFromFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Pointer<VideoCapture>)>>('VideoCapture_NewFromFile');
  late final _VideoCapture_NewFromFile =
      _VideoCapture_NewFromFilePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, int, ffi.Pointer<VideoCapture>)>();

  ffi.Pointer<CvStatus> VideoCapture_NewFromFile_Async(
    ffi.Pointer<ffi.Char> filename,
    int apiPreference,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_NewFromFile_Async(
      filename,
      apiPreference,
      callback,
    );
  }

  late final _VideoCapture_NewFromFile_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, ffi.Int,
              imp1.CvCallback_1)>>('VideoCapture_NewFromFile_Async');
  late final _VideoCapture_NewFromFile_Async =
      _VideoCapture_NewFromFile_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_NewFromIndex(
    int index,
    int apiPreference,
    ffi.Pointer<VideoCapture> rval,
  ) {
    return _VideoCapture_NewFromIndex(
      index,
      apiPreference,
      rval,
    );
  }

  late final _VideoCapture_NewFromIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int,
              ffi.Pointer<VideoCapture>)>>('VideoCapture_NewFromIndex');
  late final _VideoCapture_NewFromIndex =
      _VideoCapture_NewFromIndexPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, int, ffi.Pointer<VideoCapture>)>();

  ffi.Pointer<CvStatus> VideoCapture_NewFromIndex_Async(
    int index,
    int apiPreference,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_NewFromIndex_Async(
      index,
      apiPreference,
      callback,
    );
  }

  late final _VideoCapture_NewFromIndex_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('VideoCapture_NewFromIndex_Async');
  late final _VideoCapture_NewFromIndex_Async =
      _VideoCapture_NewFromIndex_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_New_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_New_Async(
      callback,
    );
  }

  late final _VideoCapture_New_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'VideoCapture_New_Async');
  late final _VideoCapture_New_Async = _VideoCapture_New_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_Open(
    VideoCapture self,
    ffi.Pointer<ffi.Char> uri,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _VideoCapture_Open(
      self,
      uri,
      rval,
    );
  }

  late final _VideoCapture_OpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Bool>)>>('VideoCapture_Open');
  late final _VideoCapture_Open = _VideoCapture_OpenPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoCapture, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> VideoCapture_OpenDevice(
    VideoCapture self,
    int device,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _VideoCapture_OpenDevice(
      self,
      device,
      rval,
    );
  }

  late final _VideoCapture_OpenDevicePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int,
              ffi.Pointer<ffi.Bool>)>>('VideoCapture_OpenDevice');
  late final _VideoCapture_OpenDevice = _VideoCapture_OpenDevicePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoCapture, int, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> VideoCapture_OpenDeviceWithAPI(
    VideoCapture self,
    int device,
    int apiPreference,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _VideoCapture_OpenDeviceWithAPI(
      self,
      device,
      apiPreference,
      rval,
    );
  }

  late final _VideoCapture_OpenDeviceWithAPIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Bool>)>>('VideoCapture_OpenDeviceWithAPI');
  late final _VideoCapture_OpenDeviceWithAPI =
      _VideoCapture_OpenDeviceWithAPIPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, int, int, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> VideoCapture_OpenDeviceWithAPI_Async(
    VideoCapture self,
    int device,
    int apiPreference,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_OpenDeviceWithAPI_Async(
      self,
      device,
      apiPreference,
      callback,
    );
  }

  late final _VideoCapture_OpenDeviceWithAPI_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('VideoCapture_OpenDeviceWithAPI_Async');
  late final _VideoCapture_OpenDeviceWithAPI_Async =
      _VideoCapture_OpenDeviceWithAPI_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_OpenDevice_Async(
    VideoCapture self,
    int device,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_OpenDevice_Async(
      self,
      device,
      callback,
    );
  }

  late final _VideoCapture_OpenDevice_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int,
              imp1.CvCallback_1)>>('VideoCapture_OpenDevice_Async');
  late final _VideoCapture_OpenDevice_Async =
      _VideoCapture_OpenDevice_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_OpenWithAPI(
    VideoCapture self,
    ffi.Pointer<ffi.Char> uri,
    int apiPreference,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _VideoCapture_OpenWithAPI(
      self,
      uri,
      apiPreference,
      rval,
    );
  }
